# review-restaurants

./: Dockerfile  PROJECT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
backend/: Makefile  config.py  db.py  dbrel.py  deps.py  main.py  requirements.txt  requirements_frozen.txt  requirements_tests.txt  utils.py  validators.py
backend/apps/restaurants/: __init__.py  api.py  crud.py  models.py
backend/apps/users/: __init__.py  api.py  auth.py  crud.py  dbrel.py
backend/restaurants/: __init__.py  api.py  crud.py  dbrel.py  models.py
backend/reviews/: __init__.py  api.py  crud.py  dbrel.py  models.py
backend/scripts/: create_superadmin.py  populate_restaurants.py  restaurants.json
backend/tests/: conftest.py  test_main.py
backend/tests/fixtures/: users.json
backend/tests/users/: test_api.py
backend/users/: __init__.py  api.py  auth.py  crud.py  models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  Ifaces.d.ts  Main.tsx  api.ts  config.ts  contexts.ts  index.tsx  reducers.ts  theme.ts
frontend/src/components/: Footer.tsx  GuestRoute.tsx  HeaderIn.tsx  HeaderOut.tsx  LoginWidget.tsx  PrivateRoute.tsx  RatingStars.tsx  RatingWidget.tsx  RegisterWidget.tsx  RestaurantListItem.tsx  RestaurantReviewDialog.tsx  RestaurantReviewItem.tsx  RestaurantsWidget.tsx  ThankYouDialog.tsx
migrations/: env.py
migrations/versions/: 0c7fde184e72_added_user_and_securityscope_models.py  801202e6b7d8_empty_init.py  87975efcb357_added_restaurant_model.py
review-restaurants/: run_backend.py
(+8 files in other folders)
