[tool.poetry]
name = "review-restaurants"
version = "0.1.0"
description = "Sign up with a username and review restaurants."
authors = ["Daniela Rus Morales <danirus@eml.cc>"]

[tool.poetry.dependencies]
alembic = "^1.7"
asyncpg = "^0.25"
bcrypt = "^3.2"
fastapi = "^0.70"
fastapi-jwt-auth = "^0.5"
passlib = "^1.7"
psycopg2-binary = "^2.9.1"
python = "^3.9"
python-dotenv = "^0.19"
python-multipart = "^0.0"
pytz = "^2021.3"
sqlalchemy = "^1.4.27"
sqlalchemy-utils = "^0.37.8"

[tool.poetry.dev-dependencies]
black = "^21.12b2"
coverage = "^6.2"
httpx = "0.21.1"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry>=1.1,<1.2"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80
